--- a/_posts/2018-11-06-cabs.md
+++ b/_posts/2018-11-06-cabs.md
@@ -1,5 +1,5 @@
 ---
-title: Walking in the Light: A Faith-Filled Journey to Restful Sleep
+title: "Walking in the Light: A Faith-Filled Journey to Restful Sleep"
 image: https://source.unsplash.com/j0Deh-kkkFo/1000x750
 categories:
 tags: 
@@ -9,32 +9,32 @@ author: Taylor
 Introduction:
 In the pursuit of holistic wellness, our journey towards restful sleep is intertwined with the divine promises found in scripture. As we navigate the realms of sleep, rest, and restoration, the timeless words of John 8:12 echo through the corridors of faith: "I am the light of the world. If you follow me, you won't have to walk in darkness because you will have the light that leads to life." Join us on this illuminating exploration as we delve into the intersection of faith and sleep, discovering the transformative power of releasing anxieties and finding solace in the Light.
 
- 1. **Understanding the Light: Insights from John 8:12**
+ 1. Understanding the Light: Insights from John 8:12
 
 Unpacking the Metaphor:
 John 8:12 presents a powerful metaphor — Jesus as the Light of the world. In the context of sleep and rest, understanding this metaphor becomes a key to unlocking a pathway out of the darkness of anxiety and into the serene light of faith.
 
-2. **Letting Go of Anxiety in the Light of Christ**
+2. Letting Go of Anxiety in the Light of Christ
 
  Surrendering Worries to the Light:
 Anxieties often cast shadows over our minds, especially during the vulnerable moments before sleep. John 8:12 beckons believers to release these worries in the radiant presence of Christ, finding solace and peace that transcends the night.
 
-3. **Crafting a Sleep Sanctuary in His Light**
+3. Crafting a Sleep Sanctuary in His Light
 
  Transformative Sleep Spaces:
 Aligning our sleep spaces with the metaphor of Christ as the Light involves intentional design. By infusing our sleep environments with prayers, scriptures, and symbols of faith, believers create sanctuaries that resonate with the illuminating presence of Christ.
 
- 4. **Practical Steps for Embracing the Light**
+ 4. Practical Steps for Embracing the Light
 
  Establishing a Faith-Filled Bedtime Routine:
 Practical steps, such as establishing a faith-filled bedtime routine, align with the message of John 8:12. By incorporating prayer, meditation, and gratitude into the moments before sleep, believers actively invite the light of Christ to dispel darkness and anxieties.
 
- 5. **Walking the Path of Faith: Following His Light**
+ 5. Walking the Path of Faith: Following His Light
 
  Trusting His Guidance:
 John 8:12 invites believers to follow the light of Christ. In the context of sleep, this means trusting His guidance not only in the waking hours but also as we surrender to rest. Trusting in His light leads to a profound sense of security and peace.
 
- 6. **Living in the Radiance of His Light**
+ 6. Living in the Radiance of His Light
 
  Embracing a Light-Centric Lifestyle:
 As we incorporate the wisdom of John 8:12 into our sleep routines, it becomes a cornerstone for a light-centric lifestyle. By dwelling on Christ's illuminating presence, not only during waking hours but also in the moments before sleep, believers cultivate a holistic approach to wellness.
