Updated 1 file via CloudCannon.

--- a/_posts/2018-11-06-cabs.md
+++ b/_posts/2018-11-06-cabs.md
@@ -3,6 +3,7 @@ title: "Walking in the Light: A Faith-Filled Journey to Restful Sleep"
 image: https://source.unsplash.com/j0Deh-kkkFo/1000x750
 categories:
 tags: 
+  - spotlight
 author: Taylor
 ---
 
