Updated 1 file via CloudCannon.

--- a/_posts/2018-11-06-cabs.md
+++ b/_posts/2018-11-06-cabs.md
@@ -1,7 +1,8 @@
 ---
 title: "Walking in the Light: A Faith-Filled Journey to Restful Sleep"
 image: https://source.unsplash.com/j0Deh-kkkFo/1000x750
-categories:
+categories: 
+  - business
 tags: 
   - spotlight
 author: Taylor
