--- a/_posts/2018-11-06-cabs.md
+++ b/_posts/2018-11-06-cabs.md
@@ -4,7 +4,7 @@ image: https://source.unsplash.com/j0Deh-kkkFo/1000x750
 categories: 
   - business
 tags: 
-  - spotlight
+  - featured
 author: Taylor
 ---
 
