--- a/_posts/2018-11-04-urban.md
+++ b/_posts/2018-11-04-urban.md
@@ -3,6 +3,7 @@ title: Urban Art Projects Approved By Council This Spring
 image: https://source.unsplash.com/IQIkl2iGnbw/1000x750
 categories: [culture, business]
 author: tom
+note: 
 ---
 
 Into present as we from control as dedicated times of the in distribution you it rationale if which avoid worries can conduct, their design at you screen kind.
