fixed some broken links, added/configured new categories

--- a/404.md
+++ b/404.md
@@ -4,9 +4,9 @@ title: What?
 permalink: /404.html
 ---
 
-### The page you are looking for cannot be found. Please navigate to [homepage]({{ site.url }}).
+### The page you are looking for cannot be found. Please navigate to [homepage](/).
 
 {% include image.html img="404.png" alt="Page not found" %}
 
-<a href="{{ site.url }}" class="uk-button uk-button-default uk-button-large">Back To Home Page</a>
+<a href="/" class="uk-button uk-button-default uk-button-large">Back To Home Page</a>
 
