added working search functionality for posts and bible books; modified Judith weight

--- a/_posts/Category_Meditations/Positive_Affirmations/2025-06-30-i-am-enough-1.md
+++ b/_posts/Category_Meditations/Positive_Affirmations/2025-06-30-i-am-enough-1.md
@@ -1,11 +1,12 @@
 ---
-image: /assets/img/pa/i_trust_god.png
-title: I Trust God
+image: /assets/img/pa/i_am_enough.png
+title: I Am Enough 1
 number: 1
 categories:
+  - Meditations
   - Positive Affirmations
 author: Hope Staff
-notes: I Trust God 1
+notes: I Am Enough 1
 embed: >-
   
 transcript: >-
