--- a/_posts/Category_Meditations/Positive_Affirmations/2025-06-30-i-am-enough-2.md
+++ b/_posts/Category_Meditations/Positive_Affirmations/2025-06-30-i-am-enough-2.md
@@ -1,11 +1,12 @@
 ---
-image: /assets/img/pa/i_am_brave.png
-title: I Am Brave
+image: /assets/img/pa/i_am_enough.png
+title: I Am Enough 2
 number: 1
 categories:
+  - Meditations
   - Positive Affirmations
 author: Hope Staff
-notes: I Am Brave 1
+notes: I Am Enough 2
 embed: >-
   
 transcript: >-
