--- a/_posts/Category_Meditations/Positive_Affirmations/2025-06-30-i-am-loved.md
+++ b/_posts/Category_Meditations/Positive_Affirmations/2025-06-30-i-am-loved.md
@@ -1,11 +1,12 @@
 ---
-image: /assets/img/pa/i_am_not_alone.png
-title: I Am Not Alone
+image: /assets/img/pa/i_am_loved.png
+title: I Am Loved
 number: 1
 categories:
+  - Meditations
   - Positive Affirmations
 author: Hope Staff
-notes: I Am Not Alone 1
+notes: I Am Loved 1
 embed: >-
   
 transcript: >-
