--- a/_posts/Category_Meditations/Positive_Affirmations/2025-06-30-i-am-brave.md
+++ b/_posts/Category_Meditations/Positive_Affirmations/2025-06-30-i-am-brave.md
@@ -1,11 +1,12 @@
 ---
-image: /assets/img/pa/i_am_loved.png
-title: I Am Loved
+image: /assets/img/pa/i_am_brave.png
+title: I Am Brave
 number: 1
 categories:
+  - Meditations
   - Positive Affirmations
 author: Hope Staff
-notes: I Am Loved 1
+notes: I Am Brave 1
 embed: >-
   
 transcript: >-
