--- a/_posts/Daily_Hope/2025-07-08-daily-hope-183.md
+++ b/_posts/Daily_Hope/2025-07-08-daily-hope-183.md
@@ -7,5 +7,5 @@ categories:
 author: Hope Staff
 notes: Daily Hope 183
 embed: >-
-  EMBED_GOES_HERE
+  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/4AJRGU05Rictheb3QkCfcq?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 ---
